# estimater

./: .env.example  .gitignore  README.md  debug_firefox.py  debug_firefox2.py  debug_html.py  debug_monotaro_api.py  debug_nextdata.py  debug_scrape.py  pyproject.toml  見積もり実行.bat  見積もり監視.bat
estimater/: __init__.py  __main__.py  cli.py  config.py  models.py
estimater/notify/: slack.py
estimater/scrapers/: amazon.py  askul.py  digikey.py  engine.py  misumi.py  monotaro.py  mouser.py  rs.py  session.py  trusco.py  utils.py
estimater/sheets/: cache.py  client.py  reader.py  setup.py  watcher.py  writer.py
estimater/utils/: infer.py
