[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "estimater"
version = "0.1.0"
description = "制御盤向け電気部品の自動見積もりツール"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49.0",
    "gspread>=6.0.0",
    "google-auth>=2.36.0",
    "typer>=0.15.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
estimater = "estimater.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["estimater"]
